--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <link rel = "stylesheet" type = "text/css" href = "styles.css" />
     
 </head>
-<body class="crt" onload="loaded()">
+<body onload="loaded()">
+    <img class="overlay" src="texture1.jpg" />
+    <div class="crt">
         <div class="console">
             <p id="title"></p>
             <p class="small" id="subTitle"></p>
         </div>
-
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
