--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <div id="textArea">
             <p id="title" ></p>
             <p class="small" id="subTitle"></p>
+            <br><br><br><br><br>
+            <p class="small" id="playText"></p>
             </div>
         </div>
     </div>
