Code Insert Function Added

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
     <div class="crt" >
         <div class="console" >
             <div id="textArea">
-                <input id="startButton" class="btn pushforward" type="button" value="START" onclick="start();" />
-            <!-- <p id="title" ></p>
+            <p id="title" ></p>
             <p class="small" id="subTitle"></p>
-            <p class="small" id="playText"></p> -->
+            <div id="startButtonArea"></div>
             </div>
         </div>
     </div>
