--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <link rel = "stylesheet" type = "text/css" href = "styles.css" />
 </head>
-<body onload="loaded()"data-tilt data-tilt-max="5" data-tilt-speed="40" data-tilt-perspective="5000" >
-    <img class="overlay" src="texture1.jpg"/>
+<body onload="loaded()"data-tilt data-tilt-max="5" data-tilt-speed="40" data-tilt-perspective="1500" >
+    <img class="overlay" src="texture.jpg"/>
     <div class="crt" >
         <div class="console" >
             <div id="textArea">
