--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body onload="loaded()"data-tilt data-tilt-max="5" data-tilt-speed="40" data-tilt-perspective="1500" >
     <img class="overlay" src="texture.jpg"/>
     <div class="crt" >
-        <div class="console" >
+        <div class="console" id="console">
             <div id="textArea">
             <p id="title" ></p>
             <p class="small" id="subTitle"></p>
