Added sleep function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <div class="crt" >
         <div class="console" id="console">
             <div id="textArea">
-            <p id="title" ></p>
+            <p id="title"></p>
+            <p id="title2" ></p>
             <p class="small" id="subTitle"></p>
             <div id="startButtonArea"></div>
             <!-- <img src="images/powerButton.svg"> -->
